                        \ \ /\ / / _ \ '_ \ / _` | | | |
                         \ V  V /  __/ | | | (_| | |_| |
                          \_/\_/ \___|_| |_|\__,_|\__, |
                                                  |___/
                      synthesizing partners for services
                      http://service-technology.org/wendy


Version 2.7-unreleased
======================

Version 2.6 (23 November 2009)
==============================

* implemented user-defined data structure for the queue used in the closure
  operation

* discontinued deprecated output of operating guidelines in Fiona's file
  format (parameter `--fionaFormat') - this can be done with the compiler
  `wendy2fiona'

* discontinued output of bit operating guidelines (parameter
  `--formula=bits') - this can be done with the compiler `wendyFormula2bits'

Version 2.5 (21 November 2009)
==============================

* Wendy expects LoLA to omit printing out statistical data; usage of LoLA
  1.14 is required

* fixed bug #14798 (see `https://gna.org/bugs/?14798'): smart sending is
  too strict (now fix of bug #14782 is obsolete and is handled with the new
  implementation)

* fixed bug #14782 (see `https://gna.org/bugs/?14782'): smart sending event
  does not handle self loops of inner markings correctly

* added an error message to avoid segmentation faults in case a marking has
  two outgoing transitions with the same synchronous label (see
  `https://gna.org/bugs/?14719')

Version 2.4 (9 November 2009)
=============================

* added target for benchmarks (execute `make bench -C tests')

* implemented new 3-bit representation: at `T' bit is necessary to
  correctly cope with "true"-annotated nodes - renamed `2bits' option to
  `bits'

* removed explicit `std::flush' calls

* colored status messages

* fixed bug #14693 (`https://gna.org/bugs/?14693'): wrong propagation of
  final states yielded wrong results for livelock freedom

Version 2.3 (21 October 2009)