@@ -34,7 +34,7 @@ Knowledge::Knowledge(InnerMarking_ID m)
         : is_sane(1), posSendEventsDecoded(NULL), size(1), posSendEvents(NULL),
           consideredReceivingEvents(Label::receive_events, false) {
     // add this marking to the bubble and the todo queue
-              InterfaceMarking* empty = new InterfaceMarking();
+    InterfaceMarking* empty = new InterfaceMarking();
     bubble[m].push_back(empty);
     todo.push(m, empty);
 
